--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,9 @@ spring:
   h2:
     console:
       enabled: true
+
+security:
+  jwt:
+    token:
+      secret-key: youth
+      expire-length: 3600000
